--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   },
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "rslib build",
     "build:storybook": "storybook build",
     "check": "biome check --write",
+    "check:fix": "biome check --fix --unsafe",
     "watch": "rslib build --watch",
     "format": "biome format --write",
     "storybook": "storybook dev",
@@ -86,7 +85,9 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
+    "react": ">=16.9.0",
     "react-day-picker": "8.10.1",
+    "react-dom": ">=16.9.0",
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
@@ -94,9 +95,10 @@
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2",
-    "react": ">=16.9.0",
-    "react-dom": ">=16.9.0"
+    "zod": "^3.24.2"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "framer-motion": "^12.6.5"
+  }
 }
