--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rslib build",
     "build:storybook": "storybook build",
@@ -23,7 +25,7 @@
     "dev": "rsbuild dev"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "^2.0.0",
     "@rsbuild/core": "1.3.1",
     "@rsbuild/plugin-react": "^1.1.1",
     "@rslib/core": "^0.6.1",
@@ -99,6 +101,7 @@
   },
   "private": true,
   "dependencies": {
+    "@tanstack/react-table": "^8.21.3",
     "framer-motion": "^12.6.5"
   }
 }
