--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "lib": ["DOM", "ES2020"],
+    "lib": ["DOM", "ESNext"],
     "jsx": "react-jsx",
-    "target": "ES2020",
+    "target": "ESNext",
     "noEmit": true,
     "skipLibCheck": true,
     "useDefineForClassFields": true,
