--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["DOM", "ES2021"],
+    "lib": ["DOM", "ESNext"],
     "module": "ESNext",
     "jsx": "react-jsx",
     "strict": true,
