feat: add some demos

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
-    }
+    },
+    "./styles": "./dist/styles/globals.css",
+    "./styles/*": "./dist/styles/*"
   },
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
