fix: client check for ssr

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@e412/titanium",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "type": "module",
   "exports": {
     ".": {
@@ -103,5 +103,6 @@
     "@tanstack/react-table": "^8.21.3",
     "framer-motion": "^12.6.5"
   },
-  "private": false
+  "private": false,
+  "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
