--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,6 +12,7 @@
     "lucide-react": "^0.487.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-shiki": "^0.9.0",
     "tw-animate-css": "^1.4.0",
     "zustand": "^5.0.9"
   },
