--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@e412/titanium": "workspace:^",
+    "@headless-tree/core": "^1.5.1",
+    "@headless-tree/react": "^1.5.1",
     "lucide-react": "^0.487.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-shiki": "^0.9.0",
     "tw-animate-css": "^1.4.0",
+    "usehooks-ts": "^3.1.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
