--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,10 +11,14 @@
     "@e412/titanium": "workspace:^",
     "@headless-tree/core": "^1.5.1",
     "@headless-tree/react": "^1.5.1",
+    "@tanstack/react-table": "^8.21.3",
     "lucide-react": "^0.487.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
+    "react-router-dom": "^7.11.0",
     "react-shiki": "^0.9.0",
+    "sonner": "^2.0.7",
     "tw-animate-css": "^1.4.0",
     "usehooks-ts": "^3.1.1",
     "zustand": "^5.0.9"
