--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.5",
+    "concurrently": "^9.2.1",
     "typescript": "^5.8.2",
     "vitest": "^3.0.9"
   },
