--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
-name: PR Check
+name: CI
 
 on:
+  push:
+    branches: [master, main]
   pull_request:
     branches: [master, main]
 
@@ -19,7 +21,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 'latest'
-          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
