--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,11 +13,12 @@ on:
         type: string
 
 jobs:
-  update-version-and-tag:
-    name: Update Version and Create Tag
+  release:
+    name: Release and Publish
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -56,7 +57,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 'latest'
-          cache: 'pnpm'
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run lint
+        run: pnpm check
 
       - name: Update version files
         run: |
@@ -77,8 +84,7 @@ jobs:
           RELEASE_TITLE="${{ github.event.inputs.release_title }}"
 
           if [ -n "$RELEASE_TITLE" ]; then
-            TAG_MESSAGE="CUSTOM_TITLE: $RELEASE_TITLE"
-            git tag -a "v$VERSION" -m "$TAG_MESSAGE"
+            git tag -a "v$VERSION" -m "$RELEASE_TITLE"
           else
             git tag -a "v$VERSION" -m "Release v$VERSION"
           fi
@@ -86,7 +92,57 @@ jobs:
           git push origin "v$VERSION"
           echo "✅ Created and pushed tag v$VERSION"
 
-      - name: Done
+      - name: Build library
+        run: pnpm build:lib
+
+      - name: Publish to NPM
         run: |
-          VERSION="${{ github.event.inputs.version }}"
-          echo "🚀 Tag v$VERSION pushed - publish workflow will be triggered automatically"
+          cd packages/titanium-ui
+          pnpm publish --access public --no-git-checks
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Build docs
+        run: pnpm build:docs
+
+      - name: Deploy to Cloudflare Pages
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: pages deploy apps/docs/dist --project-name=${{ secrets.CLOUDFLARE_PROJECT_NAME }}
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ github.event.inputs.version }}
+          name: ${{ github.event.inputs.release_title || format('Release v{0}', github.event.inputs.version) }}
+          generate_release_notes: true
+          body: |
+            ## 📦 Installation
+
+            ```bash
+            pnpm add @e412/titanium
+            # or
+            npm install @e412/titanium
+            # or
+            yarn add @e412/titanium
+            ```
+
+            ## 📚 Documentation
+
+            View the full documentation at [titanium-ui.pages.dev](https://titanium-ui.pages.dev)
+
+            ---
+          draft: false
+          prerelease: false
+
+      - name: Release summary
+        run: |
+          echo "## 🚀 Release Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- **Version**: ${{ github.event.inputs.version }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **NPM Package**: [@e412/titanium](https://www.npmjs.com/package/@e412/titanium)" >> $GITHUB_STEP_SUMMARY
+          echo "- **Docs**: Deployed to Cloudflare Pages" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "✅ All tasks completed successfully!" >> $GITHUB_STEP_SUMMARY
