--- a/packages/titanium-ui/package.json
+++ b/packages/titanium-ui/package.json
@@ -14,6 +14,10 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aloks98/titanium"
+  },
   "scripts": {
     "build": "rslib build",
     "build:storybook": "storybook build",
