--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,17 +13,15 @@ on:
         type: string
 
 jobs:
-  release:
-    name: Release and Publish
+  validate:
+    name: Validate Version
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      id-token: write
+    outputs:
+      tag_exists: ${{ steps.check_tag.outputs.exists }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
       - name: Validate version format
@@ -31,19 +29,35 @@ jobs:
           VERSION="${{ github.event.inputs.version }}"
           if ! [[ "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo "❌ Error: Version must be in semver format (X.Y.Z)"
-            echo "Example: 1.2.3"
             exit 1
           fi
           echo "✅ Valid version: $VERSION"
 
-      - name: Check if tag already exists
+      - name: Check if tag exists
+        id: check_tag
         run: |
           VERSION="${{ github.event.inputs.version }}"
           if git rev-parse "v$VERSION" >/dev/null 2>&1; then
-            echo "❌ Error: Tag v$VERSION already exists"
-            exit 1
+            echo "⚠️ Tag v$VERSION already exists - skipping version bump"
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "✅ Tag v$VERSION does not exist"
+            echo "exists=false" >> $GITHUB_OUTPUT
           fi
-          echo "✅ Tag v$VERSION does not exist"
+
+  version-and-tag:
+    name: Update Version and Tag
+    needs: validate
+    if: needs.validate.outputs.tag_exists == 'false'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: Configure Git
         run: |
@@ -57,13 +71,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 'latest'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Run lint
-        run: pnpm check
 
       - name: Update version files
         run: |
@@ -92,6 +99,35 @@ jobs:
           git push origin "v$VERSION"
           echo "✅ Created and pushed tag v$VERSION"
 
+  build-and-publish:
+    name: Build and Publish to NPM
+    needs: [validate, version-and-tag]
+    if: always() && needs.validate.result == 'success' && (needs.version-and-tag.result == 'success' || needs.version-and-tag.result == 'skipped')
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      id-token: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: v${{ github.event.inputs.version }}
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'latest'
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run lint
+        run: pnpm check
+
       - name: Build library
         run: pnpm build:lib
 
@@ -102,6 +138,28 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+  deploy-docs:
+    name: Deploy Docs to Cloudflare
+    needs: [validate, version-and-tag]
+    if: always() && needs.validate.result == 'success' && (needs.version-and-tag.result == 'success' || needs.version-and-tag.result == 'skipped')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: v${{ github.event.inputs.version }}
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'latest'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
       - name: Build docs
         run: pnpm build:docs
 
@@ -110,6 +168,19 @@ jobs:
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
+  create-release:
+    name: Create GitHub Release
+    needs: [validate, version-and-tag, build-and-publish, deploy-docs]
+    if: always() && needs.build-and-publish.result == 'success' && needs.deploy-docs.result == 'success'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: v${{ github.event.inputs.version }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
