fix: code highlighter and sortable

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -236,7 +236,7 @@ jobs:
 
             ## 📚 Documentation
 
-            View the full documentation at [titanium-ui.pages.dev](https://titanium-ui.pages.dev)
+            View the full documentation at [titanium-ui.e412.in](https://titanium-ui.e412.in)
 
             ---
           draft: false
